manifests/validator-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: validator
    app.kubernetes.io/component: validator
    app.kubernetes.io/instance: validator
    app.kubernetes.io/part-of: validator
  name: validator
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: validator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      labels:
        app: validator
        deploymentconfig: validator
    spec:
      containers:
      - image: quay.io/pittar/validator:latest
        imagePullPolicy: Always
        name: validator
        ports:
        - containerPort: 8888
          protocol: TCP
        resources:
          requests:
            cpu: 250m 
            memory: 512Mi 
          limits:
            memory: 512Mi 
        readinessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 10
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 30
          timeoutSeconds: 2
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
