manifests/validator-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: validator
    app.kubernetes.io/component: validator
    app.kubernetes.io/instance: validator
    app.kubernetes.io/part-of: validator
  name: validator
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: validator
    deploymentconfig: validator
  sessionAffinity: None
  type: ClusterIP
